--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,5 +1,5 @@
 * {
-    font-size: 1.30em;
+    font-size: 60px;
 }
 
 body {
@@ -16,24 +16,32 @@ body {
     height: 200px;
     list-style-type: none;
     border-bottom: 2px solid #ddd;
-
     &:hover {
         background: #eee;
         cursor: pointer;
     }
 
     .pokemon-name {
+        padding-top: 50px;
         float: left;
-        width: 60%;
-        margin-top: 0.4em;
+        width: 40%;
         margin-left: 10%;
         margin-right: 10%;
         color: #555;
     }
 
     .pokemon-img {
-        width: 20%;
-        max-height: 200px;
+        margin: auto;
+        max-width: 20%;
+        height: 200px;
         float: left;
+    }
+
+    .pokemon-id {
+        padding-top: 50px;
+        float: left;
+        width: 10%;
+        margin-left: 5%;
+        color: #555;
     }
 }
