--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,3 +1,5 @@
+@import "loader.less";
+
 * {
     font-size: 60px;
 }
@@ -24,7 +26,7 @@ body {
     .pokemon-name {
         padding-top: 50px;
         float: left;
-        width: 40%;
+        width: 35%;
         margin-left: 10%;
         margin-right: 10%;
         color: #555;
@@ -40,8 +42,9 @@ body {
     .pokemon-id {
         padding-top: 50px;
         float: left;
-        width: 10%;
+        width: 15%;
         margin-left: 5%;
+        margin-right: 5%;
         color: #555;
     }
 }
