--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -40,6 +40,7 @@ body {
     }
 
     .pokemon-id {
+        text-align: right;
         padding-top: 50px;
         float: left;
         width: 15%;
