--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -11,41 +11,54 @@ body {
 .pokemon-list {
     margin: 0;
     padding: 0;
+
+    .pokemon-item {
+        width: 100%;
+        height: 200px;
+        list-style-type: none;
+        border-bottom: 2px solid #ddd;
+        &:hover {
+            background: #eee;
+            cursor: pointer;
+        }
+
+        .pokemon-name {
+            padding-top: 50px;
+            float: left;
+            width: 35%;
+            margin-left: 10%;
+            margin-right: 10%;
+            color: #555;
+        }
+
+        .pokemon-img {
+            margin: auto;
+            max-width: 20%;
+            height: 200px;
+            float: left;
+        }
+
+        .pokemon-id {
+            text-align: right;
+            padding-top: 50px;
+            float: left;
+            width: 15%;
+            margin-left: 5%;
+            margin-right: 5%;
+            color: #555;
+        }
+    }
 }
 
-.pokemon-item {
-    width: 100%;
+.search-bar {
     height: 200px;
-    list-style-type: none;
-    border-bottom: 2px solid #ddd;
-    &:hover {
-        background: #eee;
-        cursor: pointer;
-    }
+    width: 100%;
 
-    .pokemon-name {
-        padding-top: 50px;
-        float: left;
-        width: 35%;
-        margin-left: 10%;
-        margin-right: 10%;
-        color: #555;
-    }
-
-    .pokemon-img {
-        margin: auto;
-        max-width: 20%;
-        height: 200px;
-        float: left;
-    }
-
-    .pokemon-id {
-        text-align: right;
-        padding-top: 50px;
-        float: left;
-        width: 15%;
-        margin-left: 5%;
-        margin-right: 5%;
-        color: #555;
+    .search-bar-input {
+        height: 150px;
+        width: 95%;
+        margin-top: 25px;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
     }
 }
