--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,6 @@
 @import "loader.less";
+@import "pokemon-list.less";
+@import "search-bar.less";
 
 * {
     font-size: 60px;
@@ -8,72 +10,3 @@ body {
     margin: 0;
 }
 
-.pokemon-list {
-    margin: 0;
-    padding: 0;
-
-    .pokemon-item {
-        width: 100%;
-        height: 200px;
-        list-style-type: none;
-        border-bottom: 2px solid #ddd;
-        &:hover {
-            background: #eee;
-            cursor: pointer;
-        }
-
-        .pokemon-name {
-            padding-top: 50px;
-            float: left;
-            width: 35%;
-            margin-left: 10%;
-            margin-right: 10%;
-            color: #555;
-        }
-
-        .pokemon-img {
-            margin: auto;
-            max-width: 20%;
-            height: 200px;
-            float: left;
-        }
-
-        .pokemon-id {
-            text-align: right;
-            padding-top: 50px;
-            float: left;
-            width: 15%;
-            margin-left: 5%;
-            margin-right: 5%;
-            color: #555;
-        }
-    }
-}
-
-.search-bar {
-    height: 200px;
-    width: 100%;
-    padding-top: 25px;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
-
-    .search-bar-icon {
-        position: absolute;
-        top: 50px;
-        left: 50px;
-        width: 100px;
-        height: 100px;
-
-        path {
-            fill: #999;
-        }
-    }
-
-    .search-bar-input {
-        border: 1px solid #555;
-        width: 84%;
-        height: 150px;
-        padding-left: 148px;
-        color: #555;
-    }
-}
